# vibration-condition-monitoring

./: .gitignore  README.md  Tech_Case_Mario_Deus.md  pyproject.toml  requirements.txt  streamlit_app.py
notebooks/: 01_part1_sanity_and_psd.ipynb  01_part2_pipeline.ipynb  02_part1_fft_carpet_metric.ipynb
pages/: 01_Carpet.py  02_Looseness.py
reports/part2/: 00_plan.md  sampling_frequency_window_length_mismatch.md
src/tractian_cm/app/: app.py  ui_shared.py
src/tractian_cm/app/pages/: carpet.py  looseness.py
src/tractian_cm/dsp/: fft.py  peaks.py  spectra.py
src/tractian_cm/io/: loaders.py  metadata_part2.py
src/tractian_cm/part1/: carpet_model.py  fft_carpet.py  model.py  schemas.py
src/tractian_cm/part2/: features.py  model.py  orientation.py  sample_index.py
src/tractian_cm/part2/artifacts/: rf_looseness.joblib
src/tractian_cm/pipelines/: fft_carpet.py
src/tractian_cm/utils/: signal.py
src/tractian_cm/viz/: plotly_fft.py
