[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tractian-cm"
version = "0.1.0"
description = "Tractian Data Science Test - Condition Monitoring"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.12",
    "statsmodels>=0.14.6",
    "pydantic>=2.6",
    "matplotlib>=3.8",
    "seaborn>=0.13.2",
    "plotly>=6.5.2",
    "streamlit>=1.54.0",
    "tqdm>=4.67.3",
    "scikit-learn>=1.8"
]

[project.optional-dependencies]
notebook = [
    "jupyter>=1.0"
]
